# CadyCode

./: .gitignore  README.md  Ringdown Code Testing.ipynb  RingdownFitting.py  pyproject.toml
.ipynb_checkpoints/: Ringdown Code Testing-checkpoint.ipynb
examples/: Ringdown Code Testing.ipynb
src/cadycode/: circle_fitting.py  lockin.py  ringdown_fitting.py
